# memo_game

./: .gitignore  CMakeLists.txt
include/: gamescene.h  mainwidget.h
src/: gamescene.cpp  main.cpp  mainwidget.cpp
